@@ -1,4 +1,6 @@
-MD5 695296aea3316113968d82c6aae50ab7 kmenc15-0.03.ebuild 604
 MD5 80d717f539470bba82a72a896e50897b metadata.xml 220
-MD5 7daadae60d276a70b6dba4c54ffdfa14 ChangeLog 455
+MD5 695296aea3316113968d82c6aae50ab7 kmenc15-0.03.ebuild 604
+MD5 1e97e4f868934af042c7d05bb4709f04 kmenc15-0.04.ebuild 536
+MD5 3d7e162f98316ea8d5d5ce7048a6cb27 ChangeLog 580
 MD5 559352f3366fc3c9c81946564a9db2d7 files/digest-kmenc15-0.03 65
+MD5 b23ab29c5c9fa31da0c2cb03c6ecb235 files/digest-kmenc15-0.04 65
