@@ -1,6 +1,11 @@
 # ChangeLog for media-video/kmenc15
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kmenc15/Attic/ChangeLog,v 1.1 2005/03/15 00:17:30 trapni Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kmenc15/Attic/ChangeLog,v 1.2 2005/04/04 09:33:04 lu_zero Exp $
+
+*kmenc15-0.04 (04 Apr 2005)
+
+  04 Apr 2005; Luca Barbato <lu_zero@gentoo.org> +kmenc15-0.04.ebuild:
+  New version, now ~ppc
 
 *kmenc15-0.03 (15 Mar 2005)
 
